fixed scrollbars for good i think

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 	max-width:800px;
 	font-size: 1.1em;
 	padding:20px 10px;
-	height: 100%;
+	min-height: calc(100% - 20px);
 }
 .floating{
 	background-color: rgba(255, 255, 255, 0.5);
